# AskFrame

./: readme.md
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: ChatMessage.tsx  ChatPanel.tsx  ErrorState.tsx  FeatureTabs.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  LoadingState.tsx  Navbar.tsx  ProductMockup.tsx  StatsSection.tsx  TranscriptPanel.tsx  UrlInputSection.tsx
client/src/features/: AppSlice.tsx
client/src/pages/: DashboardPage.tsx  LandingPage.tsx
client/src/routes/: AppRouter.tsx
client/src/services/: localstorage.ts
client/src/store/: store.ts
client/src/types/: message.ts  types.ts
server/: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
server/app/: app.py
server/controllers/: rag_controllers.py
server/services/: embedding_service.py  llm_service.py  loader_service.py  retrieval_service.py  splitter_service.py  vector_service.py
