[project]
name = "rag-components"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.115.0",
    "anyio==4.14.1",
    "beautifulsoup4>=4.15.0",
    "certifi==2026.6.17",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==49.0.0",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "fastapi>=0.139.0",
    "filelock==3.29.5",
    "filetype==1.2.0",
    "fsspec==2026.6.0",
    "google-auth==2.55.1",
    "google-genai==2.10.0",
    "grandalf==0.8",
    "greenlet==3.5.3 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "h11==0.16.0",
    "hf-xet==1.5.1 ; platform_machine == 'AMD64' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.21.0",
    "idna==3.18",
    "jiter==0.16.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain==1.3.11",
    "langchain-anthropic==1.4.8",
    "langchain-chroma>=0.1.2",
    "langchain-classic==1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core==1.4.8",
    "langchain-google-genai==4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai==1.3.3",
    "langchain-protocol==0.0.18",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.7",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.9.4",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "openai==2.44.0",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pypdf>=6.14.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.6.28",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "sentence-transformers>=5.2.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.51",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tqdm==4.68.3",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.2",
    "websockets==15.0.1",
    "wikipedia>=1.4.0",
    "xxhash==3.8.0",
    "youtube-transcript-api>=1.2.4",
    "zstandard==0.25.0",
]
